--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
               <a href="./index.html" class="font-nav link">Studio</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="font-nav link">Portfolio</a>
+              <a href="./portfolio.html" class="font-nav link is-active"
+                >Portfolio</a
+              >
             </li>
             <li>
               <a href="" class="font-nav link">Contacts</a>
@@ -73,12 +75,19 @@
           <ul class="list list-portfolio-main">
             <li class="list-portfolio-images">
               <a href="./images/bankApp.jpg" class="link buttons-link">
-                <img
-                  src="./images/bankApp.jpg"
-                  width="360"
-                  height="300"
-                  alt="screens with layout bank aplication"
-                />
+                <div class="image-photo">
+                  <img
+                    src="./images/bankApp.jpg"
+                    width="360"
+                    height="300"
+                    alt="screens with layout bank aplication"
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">
                     Banking App Interface Concept
@@ -90,12 +99,19 @@
 
             <li class="list-portfolio-images">
               <a href="./images/cashlessPayment.jpg" class="link buttons-link">
-                <img
-                  src="./images/cashlessPayment.jpg"
-                  width="360"
-                  height="300"
-                  alt="someone pays cashless by phone"
-                />
+                <div class="image-photo">
+                  <img
+                    src="./images/cashlessPayment.jpg"
+                    width="360"
+                    height="300"
+                    alt="someone pays cashless by phone"
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">Cashless Payment</h2>
                   <p class="text">Marketing</p>
@@ -105,12 +121,19 @@
 
             <li class="list-portfolio-images">
               <a href="./images/meditationApp.jpg" class="link buttons-link">
-                <img
-                  src="./images/meditationApp.jpg"
-                  width="360"
-                  height="300"
-                  alt="notebook with title return to normalcy"
-                />
+                <div class="image-photo">
+                  <img
+                    src="./images/meditationApp.jpg"
+                    width="360"
+                    height="300"
+                    alt="notebook with title return to normalcy"
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">Meditation App</h2>
                   <p class="text">App</p>
@@ -120,12 +143,19 @@
 
             <li class="list-portfolio-images">
               <a href="./images/taxiService.jpg" class="link buttons-link">
-                <img
-                  src="./images/taxiService.jpg"
-                  width="360"
-                  height="300"
-                  alt="someone holding steering wheel"
-                />
+                <div class="image-photo">
+                  <img
+                    src="./images/taxiService.jpg"
+                    width="360"
+                    height="300"
+                    alt="someone holding steering wheel"
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">Taxi Service</h2>
                   <p class="text">Marketing</p>
@@ -137,13 +167,19 @@
               <a
                 href="./images/screenIllustrations.jpg"
                 class="link buttons-link"
-              >
-                <img
-                  src="./images/screenIllustrations.jpg"
-                  width="360"
-                  height="300"
-                  alt="some phone screens "
-                />
+                ><div class="image-photo">
+                  <img
+                    src="./images/screenIllustrations.jpg"
+                    width="360"
+                    height="300"
+                    alt="some phone screens "
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">Screen Illustrations</h2>
                   <p class="text">Design</p>
@@ -153,12 +189,19 @@
 
             <li class="list-portfolio-images">
               <a href="./images/onlineCourses.jpg" class="link buttons-link">
-                <img
-                  src="./images/onlineCourses.jpg"
-                  width="360"
-                  height="300"
-                  alt="smiling woman talking whit use headphones"
-                />
+                <div class="image-photo">
+                  <img
+                    src="./images/onlineCourses.jpg"
+                    width="360"
+                    height="300"
+                    alt="smiling woman talking whit use headphones"
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">Online Courses</h2>
                   <p class="text">Marketing</p>
@@ -168,12 +211,19 @@
 
             <li class="list-portfolio-images">
               <a href="./images/instagramStories.jpg" class="link buttons-link">
-                <img
-                  src="./images/instagramStories.jpg"
-                  width="360"
-                  height="300"
-                  alt="some designe presentation"
-                />
+                <div class="image-photo">
+                  <img
+                    src="./images/instagramStories.jpg"
+                    width="360"
+                    height="300"
+                    alt="some designe presentation"
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">
                     Instagram Stories Concept
@@ -185,12 +235,19 @@
 
             <li class="list-portfolio-images">
               <a href="./images/organicFood.jpg" class="link buttons-link">
-                <img
-                  src="./images/organicFood.jpg"
-                  width="360"
-                  height="300"
-                  alt="woman carrying weighing scales"
-                />
+                <div class="image-photo">
+                  <img
+                    src="./images/organicFood.jpg"
+                    width="360"
+                    height="300"
+                    alt="woman carrying weighing scales"
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">Organic Food</h2>
                   <p class="text">Web Site</p>
@@ -200,12 +257,19 @@
 
             <li class="list-portfolio-images">
               <a href="./images/freshCoffe.jpg" class="link buttons-link">
-                <img
-                  src="./images/freshCoffe.jpg"
-                  width="360"
-                  height="300"
-                  alt="barista making a nice picture of milk on coffee"
-                />
+                <div class="image-photo">
+                  <img
+                    src="./images/freshCoffe.jpg"
+                    width="360"
+                    height="300"
+                    alt="barista making a nice picture of milk on coffee"
+                  />
+                  <p class="image-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">Fresh Coffee</h2>
                   <p class="text">Web Site</p>
