--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >
           <ul class="list nav-list">
             <li>
-              <a href="./index.html" class="font-nav link">Studio</a>
+              <a href="./index.html" class="font-nav link is-active">Studio</a>
             </li>
             <li>
               <a href="./portfolio.html" class="font-nav link">Portfolio</a>
@@ -56,7 +56,7 @@
       <section class="section-one-background">
         <div class="container">
           <h1 class="text-h-one">Effective Solutions for Your Business</h1>
-          <button type="button" class="order-service-button">
+          <button class="order-service-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
@@ -421,5 +421,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn-close" type="button" data-modal-close>
+          <svg class="icon-close icon-modal-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
